[package]
name = "coing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bs58 = "0.5.0"
chrono = "0.4.33"
crypto = "0.5.1"
hex = "0.4.3"
p256 = {version = "0.13.2", features = ["serde"]}
rand = "0.8.5"
ripemd = "0.1.3"
serde = {version = "1.0.196", features = ["derive","std"]}
serde_json = "1.0.113"
sha2 = "0.10.8"
tokio = { version = "1", features = ["full"] }

[[ bin ]]
name = "wallet"

[[ bin ]]
name = "miner"
